frag.output
Terminaux inutilisés dans la grammaire

    NOT
    '+'
    '-'
    '*'
    '/'


État 10 conflits: 2 décalage/réduction, 1 réduction/réduction
État 22 conflits: 1 réduction/réduction
État 27 conflits: 8 décalage/réduction
État 41 conflits: 1 décalage/réduction, 1 réduction/réduction
État 51 conflits: 8 décalage/réduction
État 52 conflits: 8 décalage/réduction
État 53 conflits: 8 décalage/réduction
État 54 conflits: 8 décalage/réduction
État 55 conflits: 8 décalage/réduction
État 57 conflits: 8 décalage/réduction
État 58 conflits: 8 décalage/réduction
État 59 conflits: 8 décalage/réduction


Grammaire

    0 $accept: programme $end

    1 list: expression listBis

    2 listBis: %empty
    3        | SEPAR list

    4 listp: %empty
    5      | list

    6 listArgs: %empty
    7         | listTmp

    8 listTmp: TYPE ID
    9        | TYPE ID SEPAR listTmp

   10 listVars: ID listBisVars

   11 listBisVars: %empty
   12            | SEPAR listVars

   13 listVars: %empty
   14         | list

   15 listDeclarationVar: suiteFunct

   16 $@1: %empty

   17 listDeclarationVar: TYPE ID PV $@1 listDeclarationVar
   18                   | TYPE listVars PV listDeclarationVar

   19 listDecFunct: suiteMain
   20             | listDeclarationFunct listDecFunct

   21 $@2: %empty

   22 listDeclarationFunct: TYPE ID LPAR $@2 listArgs RPAR PV

   23 suiteMain: main

   24 suiteFunct: listDecFunct

   25 instructions: %empty

   26 $@3: %empty

   27 instructions: TYPE ID PV $@3 instructions
   28             | ID LPAR listp RPAR PV instructions

   29 $@4: %empty

   30 instructions: ID AFF expression PV $@4 instructions
   31             | condition
   32             | while
   33             | retour

   34 while: WHILE LPAR expression RPAR bloc instructions

   35 $@5: %empty

   36 condition: IF LPAR expression RPAR bloc $@5 instructions

   37 $@6: %empty

   38 condition: IF LPAR expression RPAR bloc $@6 ELSE bloc instructions

   39 $@7: %empty

   40 bloc: ACO $@7 instructions ACF

   41 retour: RETURN expression PV instructions

   42 programme: listDeclarationVar

   43 main: TYPE MAIN LPAR RPAR bloc

   44 expression: expression expressionBis
   45           | ENT
   46           | ID
   47           | ID LPAR listp RPAR
   48           | LPAR expression RPAR
   49           | '!' expression

   50 expressionBis: ADD expression
   51              | MOINS expression
   52              | MULT expression
   53              | EQ expression
   54              | INFS expression
   55              | INFE expression
   56              | ET expression
   57              | OR expression


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '!' (33) 49
    '*' (42)
    '+' (43)
    '-' (45)
    '/' (47)
    error (256)
    ENT <intVal> (258) 45
    ID <stringVal> (259) 8 9 10 17 22 27 28 30 46 47
    EQ <stringVal> (260) 53
    INFS <stringVal> (261) 54
    INFE <stringVal> (262) 55
    ET <stringVal> (263) 56
    OR <stringVal> (264) 57
    TYPE <stringVal> (265) 8 9 17 18 22 27 43
    IF <stringVal> (266) 36 38
    ELSE <stringVal> (267) 38
    WHILE <stringVal> (268) 34
    SEPAR <stringVal> (269) 3 9 12
    PV <stringVal> (270) 17 18 22 27 28 30 41
    ACF <stringVal> (271) 40
    ACO <stringVal> (272) 40
    LPAR <stringVal> (273) 22 28 34 36 38 43 47 48
    RPAR <stringVal> (274) 22 28 34 36 38 43 47 48
    ADD <stringVal> (275) 50
    MOINS <stringVal> (276) 51
    MULT <stringVal> (277) 52
    AFF <stringVal> (278) 30
    NOT <stringVal> (279)
    RETURN <stringVal> (280) 41
    MAIN <stringVal> (281) 43


Non-terminaux, suivis des règles où ils apparaissent

    $accept (32)
        à gauche: 0
    list (33)
        à gauche: 1
        à droite: 3 5 14
    listBis (34)
        à gauche: 2 3
        à droite: 1
    listp (35)
        à gauche: 4 5
        à droite: 28 47
    listArgs (36)
        à gauche: 6 7
        à droite: 22
    listTmp (37)
        à gauche: 8 9
        à droite: 7 9
    listVars (38)
        à gauche: 10 13 14
        à droite: 12 18
    listBisVars (39)
        à gauche: 11 12
        à droite: 10
    listDeclarationVar (40)
        à gauche: 15 17 18
        à droite: 17 18 42
    $@1 (41)
        à gauche: 16
        à droite: 17
    listDecFunct (42)
        à gauche: 19 20
        à droite: 20 24
    listDeclarationFunct (43)
        à gauche: 22
        à droite: 20
    $@2 (44)
        à gauche: 21
        à droite: 22
    suiteMain (45)
        à gauche: 23
        à droite: 19
    suiteFunct (46)
        à gauche: 24
        à droite: 15
    instructions (47)
        à gauche: 25 27 28 30 31 32 33
        à droite: 27 28 30 34 36 38 40 41
    $@3 (48)
        à gauche: 26
        à droite: 27
    $@4 (49)
        à gauche: 29
        à droite: 30
    while (50)
        à gauche: 34
        à droite: 32
    condition (51)
        à gauche: 36 38
        à droite: 31
    $@5 (52)
        à gauche: 35
        à droite: 36
    $@6 (53)
        à gauche: 37
        à droite: 38
    bloc (54)
        à gauche: 40
        à droite: 34 36 38 43
    $@7 (55)
        à gauche: 39
        à droite: 40
    retour (56)
        à gauche: 41
        à droite: 33
    programme (57)
        à gauche: 42
        à droite: 0
    main (58)
        à gauche: 43
        à droite: 23
    expression (59)
        à gauche: 44 45 46 47 48 49
        à droite: 1 30 34 36 38 41 44 48 49 50 51 52 53 54 55 56 57
    expressionBis (60)
        à gauche: 50 51 52 53 54 55 56 57
        à droite: 44


État 0

    0 $accept: . programme $end
   15 listDeclarationVar: . suiteFunct
   17                   | . TYPE ID PV $@1 listDeclarationVar
   18                   | . TYPE listVars PV listDeclarationVar
   19 listDecFunct: . suiteMain
   20             | . listDeclarationFunct listDecFunct
   22 listDeclarationFunct: . TYPE ID LPAR $@2 listArgs RPAR PV
   23 suiteMain: . main
   24 suiteFunct: . listDecFunct
   42 programme: . listDeclarationVar
   43 main: . TYPE MAIN LPAR RPAR bloc

    TYPE  décalage et aller à l'état 1

    listDeclarationVar    aller à l'état 2
    listDecFunct          aller à l'état 3
    listDeclarationFunct  aller à l'état 4
    suiteMain             aller à l'état 5
    suiteFunct            aller à l'état 6
    programme             aller à l'état 7
    main                  aller à l'état 8


État 1

    1 list: . expression listBis
   10 listVars: . ID listBisVars
   13         | . %empty  [PV]
   14         | . list
   17 listDeclarationVar: TYPE . ID PV $@1 listDeclarationVar
   18                   | TYPE . listVars PV listDeclarationVar
   22 listDeclarationFunct: TYPE . ID LPAR $@2 listArgs RPAR PV
   43 main: TYPE . MAIN LPAR RPAR bloc
   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 10
    LPAR  décalage et aller à l'état 11
    MAIN  décalage et aller à l'état 12
    '!'   décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 13 (listVars)

    list        aller à l'état 14
    listVars    aller à l'état 15
    expression  aller à l'état 16


État 2

   42 programme: listDeclarationVar .

    $défaut  réduction par utilisation de la règle 42 (programme)


État 3

   24 suiteFunct: listDecFunct .

    $défaut  réduction par utilisation de la règle 24 (suiteFunct)


État 4

   19 listDecFunct: . suiteMain
   20             | . listDeclarationFunct listDecFunct
   20             | listDeclarationFunct . listDecFunct
   22 listDeclarationFunct: . TYPE ID LPAR $@2 listArgs RPAR PV
   23 suiteMain: . main
   43 main: . TYPE MAIN LPAR RPAR bloc

    TYPE  décalage et aller à l'état 17

    listDecFunct          aller à l'état 18
    listDeclarationFunct  aller à l'état 4
    suiteMain             aller à l'état 5
    main                  aller à l'état 8


État 5

   19 listDecFunct: suiteMain .

    $défaut  réduction par utilisation de la règle 19 (listDecFunct)


État 6

   15 listDeclarationVar: suiteFunct .

    $défaut  réduction par utilisation de la règle 15 (listDeclarationVar)


État 7

    0 $accept: programme . $end

    $end  décalage et aller à l'état 19


État 8

   23 suiteMain: main .

    $défaut  réduction par utilisation de la règle 23 (suiteMain)


État 9

   45 expression: ENT .

    $défaut  réduction par utilisation de la règle 45 (expression)


État 10

   10 listVars: ID . listBisVars
   11 listBisVars: . %empty  [PV]
   12            | . SEPAR listVars
   17 listDeclarationVar: TYPE ID . PV $@1 listDeclarationVar
   22 listDeclarationFunct: TYPE ID . LPAR $@2 listArgs RPAR PV
   46 expression: ID .  [EQ, INFS, INFE, ET, OR, SEPAR, PV, ADD, MOINS, MULT]
   47           | ID . LPAR listp RPAR

    SEPAR  décalage et aller à l'état 20
    PV     décalage et aller à l'état 21
    LPAR   décalage et aller à l'état 22

    SEPAR     [réduction par utilisation de la règle 46 (expression)]
    PV        [réduction par utilisation de la règle 11 (listBisVars)]
    PV        [réduction par utilisation de la règle 46 (expression)]
    $défaut  réduction par utilisation de la règle 46 (expression)

    listBisVars  aller à l'état 23


État 11

   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   48           | . LPAR expression RPAR
   48           | LPAR . expression RPAR
   49           | . '!' expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 24
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    expression  aller à l'état 25


État 12

   43 main: TYPE MAIN . LPAR RPAR bloc

    LPAR  décalage et aller à l'état 26


État 13

   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression
   49           | '!' . expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 24
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    expression  aller à l'état 27


État 14

   14 listVars: list .

    $défaut  réduction par utilisation de la règle 14 (listVars)


État 15

   18 listDeclarationVar: TYPE listVars . PV listDeclarationVar

    PV  décalage et aller à l'état 28


État 16

    1 list: expression . listBis
    2 listBis: . %empty  [PV, RPAR]
    3        | . SEPAR list
   44 expression: expression . expressionBis
   50 expressionBis: . ADD expression
   51              | . MOINS expression
   52              | . MULT expression
   53              | . EQ expression
   54              | . INFS expression
   55              | . INFE expression
   56              | . ET expression
   57              | . OR expression

    EQ     décalage et aller à l'état 29
    INFS   décalage et aller à l'état 30
    INFE   décalage et aller à l'état 31
    ET     décalage et aller à l'état 32
    OR     décalage et aller à l'état 33
    SEPAR  décalage et aller à l'état 34
    ADD    décalage et aller à l'état 35
    MOINS  décalage et aller à l'état 36
    MULT   décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 2 (listBis)

    listBis        aller à l'état 38
    expressionBis  aller à l'état 39


État 17

   22 listDeclarationFunct: TYPE . ID LPAR $@2 listArgs RPAR PV
   43 main: TYPE . MAIN LPAR RPAR bloc

    ID    décalage et aller à l'état 40
    MAIN  décalage et aller à l'état 12


État 18

   20 listDecFunct: listDeclarationFunct listDecFunct .

    $défaut  réduction par utilisation de la règle 20 (listDecFunct)


État 19

    0 $accept: programme $end .

    $défaut  accepter


État 20

    1 list: . expression listBis
   10 listVars: . ID listBisVars
   12 listBisVars: SEPAR . listVars
   13 listVars: . %empty  [PV]
   14         | . list
   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 41
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 13 (listVars)

    list        aller à l'état 14
    listVars    aller à l'état 42
    expression  aller à l'état 16


État 21

   16 $@1: . %empty
   17 listDeclarationVar: TYPE ID PV . $@1 listDeclarationVar

    $défaut  réduction par utilisation de la règle 16 ($@1)

    $@1  aller à l'état 43


État 22

    1 list: . expression listBis
    4 listp: . %empty  [RPAR]
    5      | . list
   21 $@2: . %empty  [TYPE, RPAR]
   22 listDeclarationFunct: TYPE ID LPAR . $@2 listArgs RPAR PV
   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   47           | ID LPAR . listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 24
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    TYPE      réduction par utilisation de la règle 21 ($@2)
    RPAR      réduction par utilisation de la règle 4 (listp)
    RPAR      [réduction par utilisation de la règle 21 ($@2)]
    $défaut  réduction par utilisation de la règle 4 (listp)

    list        aller à l'état 44
    listp       aller à l'état 45
    $@2         aller à l'état 46
    expression  aller à l'état 16


État 23

   10 listVars: ID listBisVars .

    $défaut  réduction par utilisation de la règle 10 (listVars)


État 24

   46 expression: ID .  [EQ, INFS, INFE, ET, OR, SEPAR, PV, RPAR, ADD, MOINS, MULT]
   47           | ID . LPAR listp RPAR

    LPAR  décalage et aller à l'état 47

    $défaut  réduction par utilisation de la règle 46 (expression)


État 25

   44 expression: expression . expressionBis
   48           | LPAR expression . RPAR
   50 expressionBis: . ADD expression
   51              | . MOINS expression
   52              | . MULT expression
   53              | . EQ expression
   54              | . INFS expression
   55              | . INFE expression
   56              | . ET expression
   57              | . OR expression

    EQ     décalage et aller à l'état 29
    INFS   décalage et aller à l'état 30
    INFE   décalage et aller à l'état 31
    ET     décalage et aller à l'état 32
    OR     décalage et aller à l'état 33
    RPAR   décalage et aller à l'état 48
    ADD    décalage et aller à l'état 35
    MOINS  décalage et aller à l'état 36
    MULT   décalage et aller à l'état 37

    expressionBis  aller à l'état 39


État 26

   43 main: TYPE MAIN LPAR . RPAR bloc

    RPAR  décalage et aller à l'état 49


État 27

   44 expression: expression . expressionBis
   49           | '!' expression .  [EQ, INFS, INFE, ET, OR, SEPAR, PV, RPAR, ADD, MOINS, MULT]
   50 expressionBis: . ADD expression
   51              | . MOINS expression
   52              | . MULT expression
   53              | . EQ expression
   54              | . INFS expression
   55              | . INFE expression
   56              | . ET expression
   57              | . OR expression

    EQ     décalage et aller à l'état 29
    INFS   décalage et aller à l'état 30
    INFE   décalage et aller à l'état 31
    ET     décalage et aller à l'état 32
    OR     décalage et aller à l'état 33
    ADD    décalage et aller à l'état 35
    MOINS  décalage et aller à l'état 36
    MULT   décalage et aller à l'état 37

    EQ        [réduction par utilisation de la règle 49 (expression)]
    INFS      [réduction par utilisation de la règle 49 (expression)]
    INFE      [réduction par utilisation de la règle 49 (expression)]
    ET        [réduction par utilisation de la règle 49 (expression)]
    OR        [réduction par utilisation de la règle 49 (expression)]
    ADD       [réduction par utilisation de la règle 49 (expression)]
    MOINS     [réduction par utilisation de la règle 49 (expression)]
    MULT      [réduction par utilisation de la règle 49 (expression)]
    $défaut  réduction par utilisation de la règle 49 (expression)

    expressionBis  aller à l'état 39


État 28

   15 listDeclarationVar: . suiteFunct
   17                   | . TYPE ID PV $@1 listDeclarationVar
   18                   | . TYPE listVars PV listDeclarationVar
   18                   | TYPE listVars PV . listDeclarationVar
   19 listDecFunct: . suiteMain
   20             | . listDeclarationFunct listDecFunct
   22 listDeclarationFunct: . TYPE ID LPAR $@2 listArgs RPAR PV
   23 suiteMain: . main
   24 suiteFunct: . listDecFunct
   43 main: . TYPE MAIN LPAR RPAR bloc

    TYPE  décalage et aller à l'état 1

    listDeclarationVar    aller à l'état 50
    listDecFunct          aller à l'état 3
    listDeclarationFunct  aller à l'état 4
    suiteMain             aller à l'état 5
    suiteFunct            aller à l'état 6
    main                  aller à l'état 8


État 29

   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression
   53 expressionBis: EQ . expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 24
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    expression  aller à l'état 51


État 30

   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression
   54 expressionBis: INFS . expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 24
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    expression  aller à l'état 52


État 31

   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression
   55 expressionBis: INFE . expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 24
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    expression  aller à l'état 53


État 32

   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression
   56 expressionBis: ET . expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 24
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    expression  aller à l'état 54


État 33

   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression
   57 expressionBis: OR . expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 24
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    expression  aller à l'état 55


État 34

    1 list: . expression listBis
    3 listBis: SEPAR . list
   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 24
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    list        aller à l'état 56
    expression  aller à l'état 16


État 35

   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression
   50 expressionBis: ADD . expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 24
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    expression  aller à l'état 57


État 36

   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression
   51 expressionBis: MOINS . expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 24
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    expression  aller à l'état 58


État 37

   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression
   52 expressionBis: MULT . expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 24
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    expression  aller à l'état 59


État 38

    1 list: expression listBis .

    $défaut  réduction par utilisation de la règle 1 (list)


État 39

   44 expression: expression expressionBis .

    $défaut  réduction par utilisation de la règle 44 (expression)


État 40

   22 listDeclarationFunct: TYPE ID . LPAR $@2 listArgs RPAR PV

    LPAR  décalage et aller à l'état 60


État 41

   10 listVars: ID . listBisVars
   11 listBisVars: . %empty  [PV]
   12            | . SEPAR listVars
   46 expression: ID .  [EQ, INFS, INFE, ET, OR, SEPAR, PV, ADD, MOINS, MULT]
   47           | ID . LPAR listp RPAR

    SEPAR  décalage et aller à l'état 20
    LPAR   décalage et aller à l'état 47

    SEPAR     [réduction par utilisation de la règle 46 (expression)]
    PV        réduction par utilisation de la règle 11 (listBisVars)
    PV        [réduction par utilisation de la règle 46 (expression)]
    $défaut  réduction par utilisation de la règle 46 (expression)

    listBisVars  aller à l'état 23


État 42

   12 listBisVars: SEPAR listVars .

    $défaut  réduction par utilisation de la règle 12 (listBisVars)


État 43

   15 listDeclarationVar: . suiteFunct
   17                   | . TYPE ID PV $@1 listDeclarationVar
   17                   | TYPE ID PV $@1 . listDeclarationVar
   18                   | . TYPE listVars PV listDeclarationVar
   19 listDecFunct: . suiteMain
   20             | . listDeclarationFunct listDecFunct
   22 listDeclarationFunct: . TYPE ID LPAR $@2 listArgs RPAR PV
   23 suiteMain: . main
   24 suiteFunct: . listDecFunct
   43 main: . TYPE MAIN LPAR RPAR bloc

    TYPE  décalage et aller à l'état 1

    listDeclarationVar    aller à l'état 61
    listDecFunct          aller à l'état 3
    listDeclarationFunct  aller à l'état 4
    suiteMain             aller à l'état 5
    suiteFunct            aller à l'état 6
    main                  aller à l'état 8


État 44

    5 listp: list .

    $défaut  réduction par utilisation de la règle 5 (listp)


État 45

   47 expression: ID LPAR listp . RPAR

    RPAR  décalage et aller à l'état 62


État 46

    6 listArgs: . %empty  [RPAR]
    7         | . listTmp
    8 listTmp: . TYPE ID
    9        | . TYPE ID SEPAR listTmp
   22 listDeclarationFunct: TYPE ID LPAR $@2 . listArgs RPAR PV

    TYPE  décalage et aller à l'état 63

    $défaut  réduction par utilisation de la règle 6 (listArgs)

    listArgs  aller à l'état 64
    listTmp   aller à l'état 65


État 47

    1 list: . expression listBis
    4 listp: . %empty  [RPAR]
    5      | . list
   44 expression: . expression expressionBis
   45           | . ENT
   46           | . ID
   47           | . ID LPAR listp RPAR
   47           | ID LPAR . listp RPAR
   48           | . LPAR expression RPAR
   49           | . '!' expression

    ENT   décalage et aller à l'état 9
    ID    décalage et aller à l'état 24
    LPAR  décalage et aller à l'état 11
    '!'   décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 4 (listp)

    list        aller à l'état 44
    listp       aller à l'état 45
    expression  aller à l'état 16


État 48

   48 expression: LPAR expression RPAR .

    $défaut  réduction par utilisation de la règle 48 (expression)


État 49

   40 bloc: . ACO $@7 instructions ACF
   43 main: TYPE MAIN LPAR RPAR . bloc

    ACO  décalage et aller à l'état 66

    bloc  aller à l'état 67


État 50

   18 listDeclarationVar: TYPE listVars PV listDeclarationVar .

    $défaut  réduction par utilisation de la règle 18 (listDeclarationVar)


État 51

   44 expression: expression . expressionBis
   50 expressionBis: . ADD expression
   51              | . MOINS expression
   52              | . MULT expression
   53              | . EQ expression
   53              | EQ expression .  [EQ, INFS, INFE, ET, OR, SEPAR, PV, RPAR, ADD, MOINS, MULT]
   54              | . INFS expression
   55              | . INFE expression
   56              | . ET expression
   57              | . OR expression

    EQ     décalage et aller à l'état 29
    INFS   décalage et aller à l'état 30
    INFE   décalage et aller à l'état 31
    ET     décalage et aller à l'état 32
    OR     décalage et aller à l'état 33
    ADD    décalage et aller à l'état 35
    MOINS  décalage et aller à l'état 36
    MULT   décalage et aller à l'état 37

    EQ        [réduction par utilisation de la règle 53 (expressionBis)]
    INFS      [réduction par utilisation de la règle 53 (expressionBis)]
    INFE      [réduction par utilisation de la règle 53 (expressionBis)]
    ET        [réduction par utilisation de la règle 53 (expressionBis)]
    OR        [réduction par utilisation de la règle 53 (expressionBis)]
    ADD       [réduction par utilisation de la règle 53 (expressionBis)]
    MOINS     [réduction par utilisation de la règle 53 (expressionBis)]
    MULT      [réduction par utilisation de la règle 53 (expressionBis)]
    $défaut  réduction par utilisation de la règle 53 (expressionBis)

    expressionBis  aller à l'état 39


État 52

   44 expression: expression . expressionBis
   50 expressionBis: . ADD expression
   51              | . MOINS expression
   52              | . MULT expression
   53              | . EQ expression
   54              | . INFS expression
   54              | INFS expression .  [EQ, INFS, INFE, ET, OR, SEPAR, PV, RPAR, ADD, MOINS, MULT]
   55              | . INFE expression
   56              | . ET expression
   57              | . OR expression

    EQ     décalage et aller à l'état 29
    INFS   décalage et aller à l'état 30
    INFE   décalage et aller à l'état 31
    ET     décalage et aller à l'état 32
    OR     décalage et aller à l'état 33
    ADD    décalage et aller à l'état 35
    MOINS  décalage et aller à l'état 36
    MULT   décalage et aller à l'état 37

    EQ        [réduction par utilisation de la règle 54 (expressionBis)]
    INFS      [réduction par utilisation de la règle 54 (expressionBis)]
    INFE      [réduction par utilisation de la règle 54 (expressionBis)]
    ET        [réduction par utilisation de la règle 54 (expressionBis)]
    OR        [réduction par utilisation de la règle 54 (expressionBis)]
    ADD       [réduction par utilisation de la règle 54 (expressionBis)]
    MOINS     [réduction par utilisation de la règle 54 (expressionBis)]
    MULT      [réduction par utilisation de la règle 54 (expressionBis)]
    $défaut  réduction par utilisation de la règle 54 (expressionBis)

    expressionBis  aller à l'état 39


État 53

   44 expression: expression . expressionBis
   50 expressionBis: . ADD expression
   51              | . MOINS expression
   52              | . MULT expression
   53              | . EQ expression
   54              | . INFS expression
   55              | . INFE expression
   55              | INFE expression .  [EQ, INFS, INFE, ET, OR, SEPAR, PV, RPAR, ADD, MOINS, MULT]
   56              | . ET expression
   57              | . OR expression

    EQ     décalage et aller à l'état 29
    INFS   décalage et aller à l'état 30
    INFE   décalage et aller à l'état 31
    ET     décalage et aller à l'état 32
    OR     décalage et aller à l'état 33
    ADD    décalage et aller à l'état 35
    MOINS  décalage et aller à l'état 36
    MULT   décalage et aller à l'état 37

    EQ        [réduction par utilisation de la règle 55 (expressionBis)]
    INFS      [réduction par utilisation de la règle 55 (expressionBis)]
    INFE      [réduction par utilisation de la règle 55 (expressionBis)]
    ET        [réduction par utilisation de la règle 55 (expressionBis)]
    OR        [réduction par utilisation de la règle 55 (expressionBis)]
    ADD       [réduction par utilisation de la règle 55 (expressionBis)]
    MOINS     [réduction par utilisation de la règle 55 (expressionBis)]
    MULT      [réduction par utilisation de la règle 55 (expressionBis)]
    $défaut  réduction par utilisation de la règle 55 (expressionBis)

    expressionBis  aller à l'état 39


État 54
